2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (netfs_S_file_exec): New function.
	(netfs_S_io_prenotify): Fix last change.
	(netfs_S_io_postnotify): Likewise.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (NETFS_S_SIMPLE): New macro.
	(netfs_S_io_get_conch): New function.
	(netfs_S_io_release_conch): New function.
	(netfs_S_io_eofnotify): New function.
	(netfs_S_io_prenotify): New function.
	(netfs_S_io_postnotify): New function.
	(netfs_S_io_readnotify): New function.
	(netfs_S_io_readsleep): New function.
	(netfs_S_io_sigio): New function.
	(netfs_S_io_map_cntl): New function.

2002-05-12  Roland McGrath  <roland@frob.com>

	* fakeroot.c (netfs_attempt_lookup): Treat EOPNOTSUPP like EACCES.
	When all modes fail, try opening the node with zero openmodes.

	* fakeroot.c (netfs_demuxer): New function.  Reflect unrecognized
	messages to the underlying node port.

2002-05-11  Roland McGrath  <roland@frob.com>

	* fakeroot.c (main): Stat the root node and fake its st_mode
	immediately to remove translator bits.

2002-05-06  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (netfs_attempt_lookup): Really check for EROFS or
	EISDIR error from O_RDWR lookup (the last change checked for
	O_RDWR | O_EXEC look ups, which is also necessary).
	(netfs_attempt_mkfile): Unlock DIR.
	(netfs_attempt_create_file): Likewise.
	(netfs_S_io_map): New function.

2002-05-05  Roland McGrath  <roland@frob.com>

	* fakeroot.c (netfs_attempt_lookup): Check for EROFS or EISDIR error
	from O_RDWR lookup.

	* fakeroot.c (netfs_attempt_lookup): Check io_identity result for our
	own fsys identity port; on match, look up the existing node for the
	port to ourselves.

	* fakeroot.c (netfs_attempt_lookup): Unlock DIR before doing RPCs.

2002-05-03  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (netfs_node_norefs): Unlock node after not dropping
	it at all.

2002-05-03  Roland McGrath  <roland@frob.com>

	* Makefile (fakeroot): New target.
	(targets): Add it.